# roboCup_team2

grasp/include/grasp/: Arm_class.h
grasp/src/: Arm_class.cpp  placethings.cpp
src/from2Dto3D/: CMakeLists.txt
src/from2Dto3D/include/from2Dto3D/: from2Dto3D.h
src/from2Dto3D/src/: from2Dto3D.cpp  node_2Dto3D.cpp
src/grasp/: CMakeLists.txt  package.xml
src/grasp/include/grasp/: Arm_class.h
src/grasp/launch/: octomap_tiago.launch
src/grasp/src/: Arm_class.cpp  takethings.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/include/navigation/: navigationClass.h
src/navigation/launch/: navigation.launch  navigation1.launch
src/navigation/maps/small_office/: submap_0.pgm
src/navigation/maps/tutorial_office/: map.pgm
src/navigation/src/: navigation1.cpp  navigation2.cpp
src/navigation/world/: mysimulation
src/object_recognition/: CMakeLists.txt  package.xml
src/object_recognition/include/object_recognition/: object_recognition.h
src/object_recognition/src/: ObjectRecognition.cpp  node_objectRecognition .cpp
src/place/: CMakeLists.txt  package.xml
src/place/src/: placethings.cpp
src/plane_segmentation/: CMakeLists.txt
src/plane_segmentation/config/: seg.rviz
src/plane_segmentation/include/PlaneSegmentation/: PlaneSegmentation.h
src/plane_segmentation/launch/: segment.launch
src/plane_segmentation/src/: PlaneSegmentation.cpp  segment_node.cpp
